@@ -9,6 +9,7 @@ Log:
 	- changed args for ticalcs_dirlist_ve_exist, otherwise this function is buggy 
 		with TI8x varnames (like lists due to presence of the '\' character)
 	- fixed bug in ticalcs_dirlist_ve_add when no folder exists yet
+	- added permanent TI83+/TI84+/83/86 variables to dirlist (Window Settings and others)
 
 - 12/04/2007, version 1.0.6: roms
 	- wrong battery status (debug)
